# MultipackParser

./: .dockerignore  .gitignore  COMPREHENSIVE_DOCUMENTATION.md  Dockerfile  Dockerfile.nuitka  MainWindow.ui  MultipackParser.spec  Multipack_Parser_V1D1.py  ReadMe.md  TODO.MD  build.py  build.requirements.txt  main.py  pyproject.toml  pysidedeploy.spec  requirements.txt  ui_main_window.py  untitled.ui
.github/workflows/: build-and-release.yml  build.yml  publish-release.yml  release.yml
docs/: api-reference.md  architecture.md  database-migration.md  database-setup.md  index.md  installation.md  user-guide.md
hooks/: hook-PySide6.QtVirtualKeyboard.py  runtime_hook.py
ui_files/: BlinkingLabel.py  MainWindow.ui  MainWindowResources.qrc  MainWindowResources_rc.py  PasswordDialog.py  __init__.py  message_dialog.py  password_entry.ui  ui_main_window.py  ui_password_entry.py  visualization_3d.py
utils/: UR10_Server_functions.py  UR20_Server_functions.py  UR_Common_functions.py  __init__.py  app_control.py  app_initialization.py  audio.py  database.py  global_vars.py  logging_config.py  message.py  message_manager.py  notification_popup.py  pallet_data.py  palletizer.py  robot_control.py  robot_status_monitor.py  server.py  settings.py  startup_dialogs.py  status_manager.py  ui_helpers.py  ui_setup.py  updater.py  usb_key_check.py
utils/audio/: audio.py
utils/database/: database.py  db_manager.py  migrations.py
utils/message/: __init__.py  message.py  message_manager.py  status_manager.py
utils/robot/: robot_control.py  robot_enums.py  robot_status_monitor.py
(+15 files in other folders)
