[project]
name = "multipackparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=44.0.3",
    "ffmpeg-python>=0.2.0",
    "matplotlib==3.7.5",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pyside6>=6.7.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
